Added OpenGL function support using glad

--- a/VoxelEngine/VoxelEngine.vcxproj
+++ b/VoxelEngine/VoxelEngine.vcxproj
@@ -144,9 +144,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.c" />
+    <ClCompile Include="src\glad.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Dependencies\SDL\VisualC\SDL\SDL.vcxproj">
